--- a/pcam/src/components/EnvioDenuncia/EnvioDenuncia.css
+++ b/pcam/src/components/EnvioDenuncia/EnvioDenuncia.css
@@ -1,38 +1,6 @@
-input[type=text] {
-    display: inline-block;
-    width: 20%;
-    padding: 12px;
-    margin: 8px 0;
-}
-
-.inclui-form {
-    width: 980px;
+.conteudo {
+    width: 100%;
     height: 100%;
-    position: relative;
-    margin: 20px auto;
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
+    margin:  auto;
     text-align: center;
-}
-
-.btnEnviar {
-    background-color: #a10033;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin: 5px 5px 5px 30px;
-}
-.btnCancelar{
-    background-color: gainsboro;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin: 5px;
-}
-label {
-    padding: 10px;
 }
